# threatscope

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitmodules  CLAUDE.md  DEPLOY.md  README.md  compile_yara_rules.py  config.yaml  diagnose.py  diagnose_static.py  docker-compose.gdb.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  tasks.db  test_ghidra_service.py
.sisyphus/plans/: dynamic-analysis-upgrade.md
ai/: __init__.py  base.py  ghidra_agent.py  malware_agent.py  memory_store.py  utils_tools.py
ai/prompts/: ghidra_agent.txt  malware_analysis.txt
api/: __init__.py  mcp_server.py  rest.py  websocket.py
clients/: __init__.py  threat_intel.py
core/: __init__.py  config.py  coordinator.py  database.py  ghidra_pool.py  scheduler.py  task.py  workflow_engine.py
docker/: Dockerfile.backend  Dockerfile.diec  Dockerfile.frontend  Dockerfile.gdb  Dockerfile.ghidra  Dockerfile.nginx  diec_server.py  entrypoint.sh  nginx-frontend.conf  nginx-security.conf  nginx.conf  nginx.prod.conf  requirements-ghidra.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
ghidra_service/: __init__.py  analyzer.py  client.py  http_server.py  manager.py  mcp_server.py
prompts/: ghidra_agent.md  malware_agent.md
rules/yara/: compiled_rules.yarc
scripts/: dev-services.sh  test_claude_mcp.py  test_ghidra_mcp.py
src/threatscope/: __init__.py
tests/: __init__.py  test_api_v1.py  test_dynamic_analysis.py  test_mcp_tools.py  test_static_tools.py  test_threat_intel_providers.py
threatscope/: __init__.py  cli.py
tools/: __init__.py  base.py
tools/dynamic/: __init__.py  emulator.py  monitor.py
workflows/: elf_deep_reverse.yaml  elf_quick_triage.yaml  elf_standard.yaml
(+172 files in other folders)
