[project]
name = "threatscope"
version = "0.2.0"
description = "AI-driven malware analysis framework"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ThreatScope Team"}
]
keywords = ["malware", "analysis", "security", "ai", "ghidra"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.24.0",
    "lief>=0.14.0",
    "yara-python>=4.3.0",
    "puremagic>=1.15",
    "flare-capa>=9.0.0",  # Capability detection
    "python-magic>=0.4.27",  # Fallback file type detection
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
ai = [
    "claude-agent-sdk>=0.1.40",
    "langfuse>=3.0.0",  # v3 with @observe decorator
]
ghidra = [
    "pyghidra>=1.0.0",
]
docker = [
    "docker>=7.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
all = [
    "threatscope[api,ai,ghidra,docker,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
threatscope = "threatscope.cli:main"
threatscope-api = "src.threatscope.api.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/threatscope"]
